@@ -44,7 +44,8 @@
 #include <openvas/nasl/nasl.h>
 #include <openvas/misc/network.h>    /* for internal_send */
 #include <openvas/misc/nvt_categories.h>  /* for ACT_SCANNER */
-#include <openvas/misc/plugutils.h>  /* for INTERNAL_COMM_CTRL_FINISHED */
+#include <openvas/misc/plugutils.h>     /* for plug_set_path */
+#include <openvas/misc/internal_com.h>  /* for INTERNAL_COMM_CTRL_FINISHED */
 #include <openvas/misc/store.h>      /* for store_plugin */
 #include <openvas/misc/system.h>     /* for emalloc */
 #include <openvas/misc/proctitle.h>  /* for setproctitle */
