@@ -34,7 +34,8 @@
 
 #include <openvas/misc/network.h>    /* for internal_send */
 #include <openvas/misc/nvt_categories.h>  /* for ACT_SCANNER */
-#include <openvas/misc/plugutils.h>  /* for INTERNAL_COMM_MSG_SHARED_SOCKET */
+#include <openvas/misc/internal_com.h>    /* for INTERNAL_COMM_MSG_SHARED_SOCKET */
+#include <openvas/misc/plugutils.h>  /* for rmslashes */
 #include <openvas/misc/system.h>     /* for efree */
 
 #include "pluginload.h"
